app/groom/main.css
/* 기본 라이트모드 스타일 */
body {
  background-color: white !important;
}

/* 다크모드 스타일 */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #000;
    color: #fff;
  }

  .guestbook-message-list li {
    background-color: rgb(51 65 85);
  }
}

